<resources>
    <string name="today_hot">今日热搜</string>
    <string name="search_history">历史搜索</string>
    <string name="search_input">搜索内容</string>
    <string name="no_search_result">非常抱歉，暂时未能找到您搜索的信息。</string>
    <string name="most_watch">大家都在看</string>
    <string name="clear_search_history">清除历史</string>
    <string name="newest">最新</string>
    <string name="hotest">最热</string>
    <string name="relative">相关</string>
    <string name="player_detail_rb">详情</string>
    <string name="player_commet_rb">评论\n%1$s</string>
    <string name="player_score_rb">打分\n%1$.1f</string>
    <string name="player_rative_rb">相关</string>
    <string name="download">下载</string>
    <string name="concern">关注</string>
    <string name="submit_comment">发送</string>
    <string name="filter_all">所有作品</string>
    <string name="filter_samples">测试/样片</string>
    <string name="filter_cliups">剪辑/调色</string>
    <string name="filter_scenery">风景/旅行</string>
    <string name="filter_short">短片</string>
    <string name="filter_newsreel">记录</string>
    <string name="filter_ad">商业/广告</string>
    <string name="filter_mv">MV</string>
    <string name="filter_fpv">航拍</string>
    <string name="filter_course">教程</string>
    <string name="filter_art">艺术/实验</string>
    <string name="filter_family">家庭/婚礼</string>
    <string name="filter_other">其他</string>
    <string name="filter_clear">清除</string>
    <string name="share_to">分享到</string>
    <string name="app_name">Gaiamount</string>
    <string name="ok">确定</string>
    <string name="save">保存</string>
    <string name="back">返回</string>
    <string name="requesting">正在请求数据...</string>
    <string name="network_time_out">联网超时</string>
    <string name="read_more">更多</string>
    <string name="read_less">收起</string>
    <string name="action_settings">设置</string>
    <string name="action_search">搜索</string>
    <string name="action_login">登录</string>
    <string name="pager_selector_mine">我</string>
    <string name="social_account_login">使用社交账号</string>
    <string name="forget_pwd">忘记密码</string>
    <string name="sign_btn_in_login_page">现在注册</string>
    <string name="prompt_email">手机/邮箱/用户名</string>
    <string name="prompt_password">密码</string>
    <string name="action_sign_in">登录</string>
    <string name="action_sign_in_short">登录</string>
    <string name="error_invalid_password">密码太短</string>
    <string name="error_field_required">此字段不能为空</string>
    <string name="hint_email">用户名</string>
    <string name="title_activity_login">登录</string>
    <string name="title_activity_sign_up">Sign up</string>
    <string name="title_activity_sign_up_step3">输入注册信息</string>
    <string name="title_activity_sign_up_step2">输入验证码</string>
    <string name="title_activity_reset_password">重置密码</string>
    <string name="title_activity_send_mail_success">绑定邮箱</string>
    <string name="title_activity_work_pool">作品池</string>
    <string name="title_activity_edit_info">编辑资料</string>
    <string name="title_activity_upload">上传</string>
    <string name="title_activity_video_list">视频列表</string>
    <string name="title_activity_upload_manage">上传管理</string>
    <string name="title_activity_create">创作</string>
    <string name="title_activity_settings">设置</string>
    <string name="title_activity_message">消息中心</string>
    <string name="collection_list">收藏列表</string>
    <string name="title_activity_bank_account">收款帐户</string>
    <string name="title_activity_download">下载管理</string>
    <string name="title_activity_account_book">账本</string>
    <string name="action_tip_off">举报</string>
    <string name="action_filter">筛选</string>
    <string name="action_download">下载</string>
    <string name="action_collection">收藏</string>
    <string name="action_share">分享</string>
    <string name="sign_up_hint">请确认您所在的地区的手机区号</string>
    <string name="account_et">请输入手机号233</string>
    <string name="send_ver_code">发送</string>
    <string name="ver_code_not_send_yet">请点击“发送验证码”，获取验证码</string>
    <string name="email_alreay_exist">email aready exits</string>
    <string name="pwd_et">请输入密码,密码不能少于8位</string>
    <string name="user_logout">未登录</string>
    <string name="login_success">登录成功</string>
    <string name="login_faied">登录失败</string>
    <string name="ver_code_et">请输入验证码</string>
    <string name="success_in_sign_up">注册成功重置</string>
    <string name="done">注 册</string>
    <string name="success_in_find_pwd">Your password has been successfully reset! </string>
    <string name="back_home">Go back home</string>
    <string name="title_activity_home">Gaiamount</string>
    <string name="ver_et">Verification Code</string>
    <string name="checking">Checking...</string>
    <string name="ver_code_already_send">验证码已经发送到以下手机，请在15分钟内输入</string>
    <string name="resend_ver_code">RESEND</string>
    <string name="set_pwd">6-20位包含数字字母的密码</string>
    <string name="resend_ver_code_count_down">RESEND (%1$d s)</string>
    <string name="submit">SUBMIT</string>
    <string name="user_protocol">注册即表示同意用户协议</string>
    <string name="nav_settings">设置</string>
    <string name="nav_logout">注销</string>
    <string name="sub_app_title">创作者交流平台</string>
    <string name="nav_upload">上传</string>
    <string name="iv_desc">icon</string>
    <string name="person_page">个人主页</string>
    <string name="phone_bind">手机绑定</string>
    <string name="email_bind">邮箱验证</string>
    <string name="first_recommend_text">首页推荐</string>
    <string name="hot_recommend_text">最热推荐</string>
    <string name="recommend_text">评论</string>
    <string name="resend">重新发送</string>
    <string name="set_tag_hint">请设置2-8个标签(以英文逗号分开)</string>
    <string name="title_activity_sign_up_step1">注册帐号</string>
    <string name="default_nation">中国大陆</string>
    <string name="get_vertify_code">获取验证码</string>
    <string name="input_vertify_code">请输入验证码</string>
    <string name="next">下一步</string>
    <string name="input_job">职业</string>
    <string name="input_bind_email">请输入绑定邮箱</string>
    <string name="email_alreay_send">请登录并查看您的验证邮箱，按邮件提示完成操作</string>
    <string name="mobile_network_hint">请注意，您正在使用手机流量</string>
    <string name="no_network_hint">亲，未联网～</string>
    <string name="click_to_refresh">点击刷新</string>
    <string name="video_type">视频类型</string>
    <string name="work_info">作品信息</string>
    <string name="choose_category">选择分类</string>
    <string name="set_tag">设置标签</string>
    <string name="download_set">下载设置</string>
    <string name="back_story">幕后故事</string>
    <string name="add_water_mark">添加水印</string>
    <string name="add_to_special">添加到专辑</string>
    <string name="add_to_group">添加到小组</string>
    <string name="upload_statement">上传即表示您同意网站官方协议</string>
    <string name="upload_confirm">确认上传</string>
    <string name="cover">封面</string>
    <string name="content_description">picture_s_contentDescription</string>
    <string name="toolbar_title">标题</string>
    <string name="action_upload">上传</string>
    <string name="choose_video">选择视频</string>
    <string name="get_upload_list_fail">未能获取上传列表</string>
    <string name="choose_avatar">头像选择</string>
    <string name="cancel">取消</string>
    <string name="choose_gender">选择性别</string>
    <string name="commit">提交</string>
    <string name="user_info_edit">编辑资料</string>
    <string name="user_avatar">头像</string>
    <string name="user_name">用户名</string>
    <string name="gender">性别</string>
    <string name="personal_sign">个性签名</string>
    <string name="job_type">职业</string>
    <string name="choose_job">请选择工作类型</string>
    <string name="city">地区</string>
    <string name="person_statement">个人简介</string>
    <string name="email">邮箱</string>
    <string name="phone">手机</string>
    <string name="capacity">容量</string>
    <string name="searching">正在搜索...</string>
    <string name="requesting_changed">正在请求更改</string>
    <string name="choose_city">选择城市</string>
    <string name="please_input_city">请输入您所在城市</string>
    <string name="please_input_resume">请添加对您个人的简单介绍</string>
    <string name="please_input_signature">个性签名（少于20字）</string>
    <string name="not_allow_download">不允许下载</string>
    <string name="send_vertify_code_success">发送验证码成功</string>
    <string name="action_message">消息中心</string>
    <string name="more">更多</string>
    <string name="edit_personal">编辑资料</string>
    <string name="start_comment">我来评论～</string>
    <string name="empty_content_not_allowed">评论内容不能为空哦～</string>
    <string name="comment_sucess">评论成功</string>
    <string name="collect_success">已添加到我的收藏~~</string>
    <string name="sort">排序</string>
    <string name="delete">删除</string>
    <string name="unlogin_hint">您还没有登录～</string>
    <string name="register">注册</string>
    <string name="login">登录</string>
    <string name="empty_list">下载列表为空</string>
    <string name="empty_reject">请选择至少一项</string>
    <string name="delete_success">删除成功</string>
    <string name="action_work_setting">作品设置</string>
    <string name="title_activity_work_setting">作品设置</string>
    <string name="title_activity_back">返回</string>
    <string name="save_change">保存修改</string>
    <string name="not_empty">(必填)</string>
    <string name="title_activity_account_creator">创作者</string>
    <string name="action_delete_work">删除作品</string>
    <string name="action_add_group">添加到小组</string>
    <string name="setting_about_us">关于我们</string>
    <string name="key_setting_about_us">key_setting_about_us</string>
    <string name="pref_key_default_definition" />
    <string name="VideoView_error_text_invalid_progressive_playback">Invalid progressive playback</string>
    <string name="VideoView_error_text_unknown">Unknown</string>
    <string name="VideoView_error_button">OK</string>
    <string name="search">搜索</string>
    <string name="wifi_download">仅wifi环境下观看</string>
    <string name="default_definition">默认播放清晰度</string>
    <string name="private_settings">隐私设置</string>
    <string name="clean_cache">清除缓存</string>
    <string name="settings_about_us">关于我们</string>
    <string name="version_update">版本更新</string>
    <string name="private_settings_real_name">真实姓名</string>
    <string name="private_settings_gender">性别</string>
    <string name="private_settings_twitter">Twitter</string>
    <string name="private_settings_facebook">Facebook</string>
    <string name="private_settings_sina_weibo">新浪微博</string>
    <string name="private_settings_weichat">微信</string>
    <string name="private_settings_qq">QQ</string>
    <string name="private_settings_email">邮箱</string>
    <string name="private_settings_phone">手机号</string>
    <string name="key_clean_cache">key_clean_cache</string>
    <string name="setting_group_title_other">其他</string>
    <string name="key_version_update">key_version_update</string>
    <string name="setting_group_title_advance">高级</string>
    <string name="setting_group_title_play">播放</string>
    <string name="pref_key_wifi_download">wifi_download</string>
    <string name="key_definition">key_definition</string>
    <string name="key_real_name">key_real_name</string>
    <string name="key_gender">key_gender</string>
    <string name="key_phone">key_phone</string>
    <string name="key_email">key_email</string>
    <string name="key_qq">key_qq</string>
    <string name="key_wechat">key_wechat</string>
    <string name="key_weibo">key_weibo</string>
    <string name="key_facebook">key_facebook</string>
    <string name="key_twitter">key_twitter</string>
    <string name="pref_key_private_settings">pref_key_private_settings</string>
    <string name="defalut_value">V1.0</string>
    <string name="my_group">我的小组</string>
    <string name="main_page">首页</string>
    <string name="history">历史记录</string>
    <string name="pref_key_black_list">pref_key_black_list</string>
    <string name="black_list">黑名单</string>
    <string name="settings">设置</string>
    <string name="input_password">请输入密码</string>
    <string name="email_has_send_to">邮件已发送至</string>
    <string name="finish">完成</string>
    <string name="how_to_reset">如何重置?</string>
    <string name="download_manage">缓存管理</string>
</resources>