<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group
        android:checkableBehavior="all"
        android:visible="true">
        <item
            android:id="@+id/nav_main"
            android:icon="@mipmap/ic_home"
            android:title="@string/main_page"/>
        <item
            android:id="@+id/nav_search"
            android:icon="@mipmap/ic_search_red"
            android:title="@string/search"/>
        <item
            android:id="@+id/nav_my_group"
            android:icon="@mipmap/ic_group"
            android:title="@string/my_group"/>

     <!--   <item
            android:id="@+id/nav_collection"
            android:icon="@mipmap/ic_like"
            android:title="@string/collection"/>-->
        <item
            android:id="@+id/nav_history"
            android:icon="@mipmap/ic_time"
            android:title="@string/history"/>
        <item
            android:id="@+id/nav_upload"
            android:icon="@mipmap/ic_upload"
            android:title="@string/nav_upload"/>
        <item
            android:id="@+id/nav_cache"
            android:icon="@mipmap/ic_cache"
            android:title="@string/download_manage"/>
        <!--2016.8.15关闭账本-->
        <!--<item-->
            <!--android:id="@+id/nav_account_book"-->
            <!--android:icon="@mipmap/ic_account"-->
            <!--android:title="@string/title_activity_account_book"/>-->
    </group>

    <group>
        <item
            android:id="@+id/nav_settings"
            android:icon="@mipmap/ic_settings"
            android:title="@string/settings"/>
    </group>

</menu>
