<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
    >
    <item
        android:id="@+id/action_tip_off"
        android:title="@string/action_tip_off"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_work_setting"
        android:title="@string/action_work_setting"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_share"
        android:icon="@drawable/selector_share"
        android:title="@string/action_share"
        app:showAsAction="never"
        />
    <item
        android:id="@+id/action_collection"
        android:icon="@mipmap/ic_favorite_white_24dp"
        android:orderInCategory="100"
        android:title="@string/action_collection"
        app:showAsAction="always"/>

   <!-- <item
        android:id="@+id/action_download"
        android:icon="@mipmap/ic_cloud_download_white_24dp"
        android:orderInCategory="90"
        android:title="@string/action_download"
        app:showAsAction="never"/>-->

    <item
        android:id="@+id/action_add_to_group"
        android:icon="@mipmap/ic_add_group"
        android:orderInCategory="80"
        android:title="@string/action_add_group"
        app:showAsAction="always"/>
</menu>