<?xml version="1.0" encoding="utf-8"?>
<!--lhy:-->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:gravity="center_vertical">

        <Button
            android:background="@drawable/selector_general"
            android:textSize="16sp"
            android:id="@+id/back"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginStart="8dp"
            android:textColor="@color/text_666"
            android:text="@string/back" />

        <TextView
            android:id="@+id/header_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:textSize="16sp"
            android:textColor="@color/text_333"
            android:text="@string/toolbar_title" />

        <Button
            android:background="@drawable/selector_general"
            android:textSize="16sp"
            android:id="@+id/save"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:textColor="@color/text_666"
            android:layout_marginEnd="8dp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:text="@string/save" />
    </RelativeLayout>

    <FrameLayout
        android:id="@+id/content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/header" />
</RelativeLayout>